--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
           <div class="member-meta">
             <h4>Arnaud Milet</h4>
             <span>Statisticien / Economiste</span>
-            <p>Je simplifie les données et vous accompagne à vous approprier les enjeux de demain.</p>
+            <p>Je simplifie les données territoriales et vous accompagne à vous approprier les enjeux de demain.</p>
           </div>
         </div>
       </div>
@@ -429,8 +429,8 @@
           <!-- member name & designation -->
           <div class="member-meta">
             <h4>Jean-Christophe Piriou</h4>
-            <span>Expert eau</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
+            <span>Expert Eau et Géomaticien</span>
+            <p>Digitalisation de vos processus métiers, traitements de données complexes et synthèse décisionnelle.</p>
           </div>
         </div>
       </div>
