--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
           <!-- member name & designation -->
           <div class="member-meta">
             <h4>Julie Marchand</h4>
-            <span>Médiatrice en urbanisme</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
+            <span>Médiatrice des données culturelles</span>
+            <p>Je décèle le sens de vos territoires et vous aide à le mettre en valeur pour l’appropriation de tous !</p>
           </div>
         </div>
       </div>
