envoi brigitte et mathilde

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
           <div class="member-meta">
             <h4>Arnaud Milet</h4>
             <span>Statisticien / Economiste</span>
-            <p>Je simplifie les données territoriales et vous accompagne à vous approprier les enjeux de demain.</p>
+            <p>Je simplifie les données et vous accompagne à vous approprier les enjeux de demain.</p>
           </div>
         </div>
       </div>
@@ -364,7 +364,7 @@
           <div class="member-meta">
             <h4>Brigitte Lafourcade</h4>
             <span>Urbaniste</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
+            <p>J&rsquo;apporte du conseil pour un développement cohérent des territoires et une approche participative des acteurs.</p>
           </div>
         </div>
       </div>
@@ -430,7 +430,7 @@
           <div class="member-meta">
             <h4>Jean-Christophe Piriou</h4>
             <span>Expert Eau et Géomaticien</span>
-            <p>Digitalisation de vos processus métiers, traitements de données complexes et synthèse décisionnelle.</p>
+            <p>Digitalisation de vos processus métiers, traitements de données et synthèse décisionnelle.</p>
           </div>
         </div>
       </div>
@@ -528,8 +528,8 @@
           <!-- member name & designation -->
           <div class="member-meta">
             <h4>Mathilde Vukovic</h4>
-            <span>Economiste</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
+            <span>Consultante Développement territorial</span>
+            <p>Appui à l'élaboration et à l'évaluation de stratégies, programmes et projets de développement territorial.</p>
           </div>
         </div>
       </div>
@@ -847,7 +847,7 @@
                 </div>
                 <div class="col-lg-3 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:printemps_des_territoires@framalistes.org">printemps_des_territoires@framalistes.org</a></p>
+                    <p><a href="mailto:equipeterritoires@framalistes.org">equipeterritoires@framalistes.org</a></p>
                 </div>
               </div>
         </div>
