--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
         <div class="team-member">
           <div class="member-photo">
             <!-- member photo -->
-            <img class="img-fluid lozad" src="/equipeterritoires.github.io/img/team/laurent.webp" onerror="this.onerror=null;this.src='\/equipeterritoires.github.io\/img\/team\/laurent.jpg'" alt="Laurent Chane">
+            <img class="img-fluid lozad" src="/equipeterritoires.github.io/img/team/laurent2.webp" onerror="this.onerror=null;this.src='\/equipeterritoires.github.io\/img\/team\/laurent.jpg'" alt="Laurent Chane">
 
             <!-- member social profile -->
             <div class="mask">
@@ -495,8 +495,8 @@
           <!-- member name & designation -->
           <div class="member-meta">
             <h4>Laurent Chane</h4>
-            <span>Consultant marketing</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
+            <span>Consultant Formateur en marketing touristique</span>
+            <p>Co-construire les stratégies de valorisation de territoire en concertation.</p>
           </div>
         </div>
       </div>
