--- a/index.html
+++ b/index.html
@@ -396,8 +396,8 @@
           <!-- member name & designation -->
           <div class="member-meta">
             <h4>Caroline De Ruyck</h4>
-            <span>Sociologue</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
+            <span>Sociologue / Assistant à maitrise d’usage (AMU)</span>
+            <p>Je replace l’humain au cœur de vos projets bâtis ou non bâtis.</p>
           </div>
         </div>
       </div>
